--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -42,7 +42,7 @@
       <address><span class="dis_price">$discounted_price</span><span class="ori_price">$Original_price</span></address>
       <p><span>Take <strong>percentage% off at $Original_price</strong> with promo code: <strong>promo_code</strong></span></p>
       <span class="ex_date">Expiration Date : End_date</span>
-      <%= render 'deals/notes' %>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
