--- a/app/views/deals/_codes.js.erb
+++ b/app/views/deals/_codes.js.erb
@@ -74,20 +74,20 @@
   //End
 
   //Begin goup button
-  var b =document.getElementById('goup');
-  window.onscroll=function(){
-  'use strict';
-  if(window.pageYOffset>500){
-    b.style.display='block';
-  }
-    else{
-         b.style.display='none';
-        }
-  };
-  b.onclick=function(){
-    'use strict';
-    window.scrollTo(0,0);
-  };
+  // var b =document.getElementById('goup');
+  // window.onscroll=function(){
+  // 'use strict';
+  // if(window.pageYOffset>500){
+  //   b.style.display='block';
+  // }
+  //   else{
+  //        b.style.display='none';
+  //       }
+  // };
+  // b.onclick=function(){
+  //   'use strict';
+  //   window.scrollTo(0,0);
+  // };
   //End
 
 
