--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -8,64 +8,9 @@
   
   <div class="codes common_layout">
     
-      <div class="lt_cnt">
+      <div class="lt_cnt note_pc">
         <h2>Daily Deals of Amazon</h2>
-        
-       <div class="toggle">
-          <ul>
-            <li>
-              <a href="#n">NOTES</a>
-              <ul>
-                <li>Deals & pricing may change or expire at anytime.</li>
-                <li>Free Shipping: Prime or $25+ of all other eligible items.<a target="_blank" href="/blogs/blog_01">(What's PRIME?)</a></li>
-                <li>We have just made your life easier. We offer a quick way to find the best deals. You'll find what you're looking for at a great price.</li>
-                <li>Oh,igottabuythis is a participant in the Amazon Services LLC Associates Program & the Amazon EU Associates Programme, an affiliate advertising program designed to provide a means for us to earn fees by linking to Amazon.com, Amazon.ca, Amazon.co.uk and affiliated sites.</li>
-                <li>Our website contains affiliate link which means that if you click on one of the product links and buy we’ll receive a small commission. This help supports us and allows us to continue to keep finding and sharing good deals.</li>
-              </ul>
-            </li>
-            <!-- <li>
-              <a href="#n">NONE</a>
-              <ul>
-                <li></li>
-              </ul>
-            </li> -->
-            <li>
-              <a href="#n">HOW TO USE</a>
-              <ul>
-                <li class="about_db_dis">
-                  <p>What the "Extra Discount" is?</p>
-                  <span class="double orange">Extra Discount</span>
-                  <em>You can get extra discount by clipping coupon to the product that is being discounting.</em>
-                  <span class="double purple">Coupon</span>
-                  <em>You can get discount by clipping coupon on the prodcut page.</em>
-                </li>
-              </ul>
-            </li>
-            <li class="last7days bestdeals">
-              <a href="#n">LAST 7 DAYS DAILY DEALS</a>
-              <ul>
-                <%= render 'shared/bestdeals_days' %>
-              </ul>
-            </li>
-          </ul>
-        </div><!--./toggle-->
-        <div class="last7days_pc bestdeals">
-          <p>LAST 7 DAYS DAILY DEALS</p>
-          <ul>
-            <%= render 'shared/bestdeals_days' %>
-          </ul>
-        </div>
-        
-        <div class="lt_sort_box clearfix">
-          <ul class="clearfix">
-            <li><a href="/deals/bestdeals" class="pure-button">All Codes</a></li>
-            <li><a href="#" class="pure-button sort1">Price High</a></li>
-            <li><a href="#" class="pure-button sort2">Price Low</a></li>
-            <li><a href="#" class="pure-button sort3">Sale High</a></li>
-            <li><a href="#" class="pure-button sort4">Sale Low</a></li>
-          </ul>
-        </div>
-       
+        <%= render 'deals/notes_bestdeals' %>
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
@@ -74,7 +19,7 @@
         <div class="sort_box clearfix">
           <!-- <div class="deals_des">We pick the best deals from all categories of Amazon!! We just hope you like it :D</div> -->
           <ul>
-            <li><a href="/deals/bestdeals" class="pure-button">All Codes</a></li>
+            <li><a href="/deals/bestdeals" class="pure-button">All Deals</a></li>
             <li><a href="#" class="pure-button sort1">Price High</a></li>
             <li><a href="#" class="pure-button sort2">Price Low</a></li>
             <li><a href="#" class="pure-button sort3">Sale High</a></li>
@@ -87,6 +32,14 @@
           <%= render 'deals_days/note_wadiz' %>
           <%= render 'deals/body_bestdeals' %>
         </div>
+
+        <!-- Note for mobile -->
+        <div class="lt_cnt note_mobile">
+          <h2>Daily Deals of Amazon</h2>
+          <%= render 'deals/notes_bestdeals' %>
+        </div>
+        <!-- End -->
+
         <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_07">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
         
         
@@ -94,7 +47,6 @@
 
     
     </div><!--./codes-->
-    <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button>
   </div><!--./warp-->
 </div><!--./layout-->
 <script>
