--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -7,20 +7,7 @@
     <div class="quicksearch common_layout codes">
       
         <div class="lt_cnt">
-          <h2>Quick Search</h2>
-           <div class="toggle qs_mobile">
-              <ul>
-                <li>
-                  <a href="#n">NOTES</a>
-                  <ul>
-                    <li>Amazon offers thousands of great deals, but finding the best deal through endless pages might make you crazy. It offers a quick way to find the best deals on Amazon.</li>
-                    <li>We have just made your life easier. We offer a quick way to find the best deals. You'll find what you're looking for at a great price.</li>
-                    <li>Oh,igottabuythis is a participant in the Amazon Services LLC Associates Program & the Amazon EU Associates Programme, an affiliate advertising program designed to provide a means for us to earn fees by linking to Amazon.com, Amazon.ca, Amazon.co.uk and affiliated sites.</li>
-                    <li>Our website contains affiliate link which means that if you click on one of the product links and buy we’ll receive a small commission. This help supports us and allows us to continue to keep finding and sharing good deals.</li>
-                  </ul>
-                </li>
-              </ul>
-            </div><!--./toggle-->
+          <h2 class="quick_h2">Quick Search</h2>
           <div class="note qs_pc">
             <ul>
               <li>Amazon offers thousands of great deals, but finding the best deal through endless pages might make you crazy. It offers a quick way to find the best deals on Amazon.</li>
@@ -313,6 +300,21 @@
                
           </table>
         </div><!--./rt_cnt-->
+        <div class="lt_cnt">
+           <div class="toggle qs_mobile">
+              <ul>
+                <li>
+                  <a href="#n">NOTES</a>
+                  <ul>
+                    <li>Amazon offers thousands of great deals, but finding the best deal through endless pages might make you crazy. It offers a quick way to find the best deals on Amazon.</li>
+                    <li>We have just made your life easier. We offer a quick way to find the best deals. You'll find what you're looking for at a great price.</li>
+                    <li>Oh,igottabuythis is a participant in the Amazon Services LLC Associates Program & the Amazon EU Associates Programme, an affiliate advertising program designed to provide a means for us to earn fees by linking to Amazon.com, Amazon.ca, Amazon.co.uk and affiliated sites.</li>
+                    <li>Our website contains affiliate link which means that if you click on one of the product links and buy we’ll receive a small commission. This help supports us and allows us to continue to keep finding and sharing good deals.</li>
+                  </ul>
+                </li>
+              </ul>
+            </div><!--./toggle-->
+        </div>
       </div><!--./quicksearch-->
     </div><!--./wrap-->
   </div><!--./layout-->
