--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -49,6 +49,4 @@
     </div><!--./codes-->
   </div><!--./warp-->
 </div><!--./layout-->
-<script>
- <%= render(:partial => 'codes', :handlers => [:erb], :formats => [:js]) %>
-</script>
+<script><%= render(:partial => 'codes', :handlers => [:erb], :formats => [:js]) %></script>
