deals_category media query

--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -533,8 +533,10 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .deal_category_wrap ul{text-align:center;}
 .deal_category_wrap ul li{margin:5% 0;border:3px solid #fff;padding:5px 10px;}
 .deal_category_wrap ul li a{text-decoration:none;color:#fff;font-size:30px;}
+
 @media screen and (max-width:640px){
-  .deal_category_wrap{width:100%;margin:60px 0 0 0;}
+  .deal_category_wrap .wrap{margin:0;}
+  .deal_category_wrap{width:100%;margin:35px 0 0 0;}
   .deal_category_wrap .category_body{padding:30px;}
   .deal_category_wrap .category_body h2{font-size:35px;text-align:center;border-bottom:1px solid #fff;}
   .deal_category_wrap .category_body .left,
