--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -531,8 +531,8 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .deal_category_wrap .category_body .left,
 .deal_category_wrap .category_body .right{float:left;width:40%;margin:0 5%;}
 .deal_category_wrap ul{text-align:center;}
-.deal_category_wrap ul li{margin:5% 0;border:3px solid #fff;padding:5px 10px;}
-.deal_category_wrap ul li a{text-decoration:none;color:#fff;font-size:30px;}
+.deal_category_wrap ul li{margin:5% 0;border:2px solid #fff;padding:5px 10px;}
+.deal_category_wrap ul li a{text-decoration:none;color:#000;font-size:30px;text-shadow: -2px 0 #fff, 0 2px #fff, 2px 0 #fff, 0 -2px #fff;}
 
 @media screen and (max-width:640px){
   .deal_category_wrap .wrap{margin:0;}
@@ -541,4 +541,7 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
   .deal_category_wrap .category_body h2{font-size:35px;text-align:center;border-bottom:1px solid #fff;}
   .deal_category_wrap .category_body .left,
   .deal_category_wrap .category_body .right{float:none;width:100%;margin:0;}
+}
+@media screen and (min-width:641px) and (max-width:1199px){
+  .deal_category_wrap{margin-top:40px;}
 }
