--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -524,7 +524,7 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
   .nav_most_m{display:block;}
 }
 
-
+/* Category for Instagram */
 .deal_category_wrap{width:800px;margin:100px auto 0 auto;background:#000;font-family: 'Montserrat', sans-serif;font-weight:bold;}
 .deal_category_wrap .category_body{padding:30px;}
 .deal_category_wrap .category_body h2{color:#fff;margin:0 5%;font-size:38px;}
@@ -532,7 +532,7 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .deal_category_wrap .category_body .right{float:left;width:40%;margin:0 5%;}
 .deal_category_wrap ul{text-align:center;}
 .deal_category_wrap ul li{margin:5% 0;border:2px solid #fff;padding:5px 10px;}
-.deal_category_wrap ul li a{text-decoration:none;color:#000;font-size:30px;text-shadow: -2px 0 #fff, 0 2px #fff, 2px 0 #fff, 0 -2px #fff;}
+.deal_category_wrap ul li a{text-decoration:none;color:#000;font-size:28px;text-shadow: -2px 0 #fff, 0 2px #fff, 2px 0 #fff, 0 -2px #fff;}
 
 @media screen and (max-width:640px){
   .deal_category_wrap .wrap{margin:0;}
@@ -545,3 +545,5 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 @media screen and (min-width:641px) and (max-width:1199px){
   .deal_category_wrap{margin-top:40px;}
 }
+/* End */
+
