--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -48,7 +48,190 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
 </div>
  -->
- <div class="card clearfix" data-score="35" data-price="49.72">
+
+<div class="card clearfix" data-score="30" data-price="14.69">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Of2Q4O"><img src="https://m.media-amazon.com/images/I/713omFC64+L._SR400,400_.jpg" alt="HAUSBELL Amplified HD Digital TV Antenna" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Of2Q4O">HAUSBELL Amplified HD Digital TV Antenna Long 50-80 Miles Range – Support 4K 1080P & All Older TV's Indoor Powerful HDTV ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.69</span><span class="ori_price">$20.99</span></address>
+      <textarea readonly="readonly" class="code_area">30AAHABC</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $20.99</strong> with promo code: <strong class="m_codes">30AAHABC</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 25, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Of2Q4O">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="10.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2O7V1Op"><img src="https://m.media-amazon.com/images/I/6100fqg7PCL._SR400,400_.jpg" alt="Picun Bluetooth Earphones" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2O7V1Op">Picun Bluetooth Earphones 10 Hrs Playtime IPX6 Waterproof Magnetic Bluetooth Earbuds CSR Stereo Bluetooth Sports Earphone with...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.99</span><span class="ori_price">$21.99</span>
+        <div class="tooltip_common tooltip_green"><span> + 5% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 5% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">50DH5C1N</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $21.99</strong> with promo code: <strong class="m_codes">50DH5C1N</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 25, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2O7V1Op">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="8.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30akrlE"><img src="https://m.media-amazon.com/images/I/51zMncjSODL._SR400,400_.jpg" alt="TENMOS T5 Slim Wireless Mouse" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30akrlE">TENMOS T5 Slim Wireless Mouse, 2.4G Silent Travel Mouse with USB Receiver Type-C Adapter, Rechargeable Wireless Computer ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.39</span><span class="ori_price">$13.99</span></address>
+      <textarea readonly="readonly" class="code_area">40BMWD61</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $13.99</strong> with promo code: <strong class="m_codes">40BMWD61</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 18, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30akrlE">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="30.09">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Nnknsd"><img src="https://m.media-amazon.com/images/I/61E24JSUgmL._SR400,400_.jpg" alt="BrosTrend 1200Mbps WiFi Range Extender" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Nnknsd">BrosTrend 1200Mbps WiFi Range Extender Signal Booster Repeater, Add Coverage up to 1200 s.q.f.t. in Your House, Extend...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$30.09</span><span class="ori_price">$42.99</span>
+        <div class="tooltip_common tooltip_green"><span> + 5% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 5% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">30KEXFO6</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $42.99</strong> with promo code: <strong class="m_codes">30KEXFO6</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Nnknsd">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="8.93">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31yGbVc"><img src="https://m.media-amazon.com/images/I/61CdG00oYSL._SR400,400_.jpg" alt="SHENMZ Portable Charger" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31yGbVc">SHENMZ Portable Charger, 13800mAh Power Bank,2 USB High-Speed Charging Ports Battery Pack,Ultra-Compact Small Travel ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.93</span><span class="ori_price">$19.85</span>
+        <div class="tooltip_common tooltip_green"><span> + 5% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 5% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">55JHEZUR</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>55% off at $19.85</strong> with promo code: <strong class="m_codes">55JHEZUR</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Oct 16, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31yGbVc">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2OeVtux"><img src="https://m.media-amazon.com/images/I/81w4jSwABCL._SR400,400_.jpg" alt="StorageWorks Storage Bins" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2OeVtux">StorageWorks Storage Bins with Cotton Rope Handles, Foldable Storage Basket for Shelves, Mixing of Beige, White & Ivory, 3-Pack, Medium</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">40ENSSVU</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $19.99</strong> with promo code: <strong class="m_codes">40ENSSVU</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2OeVtux">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="45" data-price="14.29">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LBLgqd"><img src="https://m.media-amazon.com/images/I/812QKP4LHkL._SR400,400_.jpg" alt="StorageWorks Closet Storage Bins" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LBLgqd">StorageWorks Closet Storage Bins, Trapezoid Storage Box, Fabric Bins and Baskets, Polyester Canvas Bins, Beige, Jumbo, 3-Pack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.29</span><span class="ori_price">$25.99</span></address>
+      <textarea readonly="readonly" class="code_area">45YK5663</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $25.99</strong> with promo code: <strong class="m_codes">45YK5663</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LBLgqd">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="40" data-price="9.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LDmoOT"><img src="https://m.media-amazon.com/images/I/51o4PNFhdNL._SR400,400_.jpg" alt="4 in 1 Travel Dispenser" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LDmoOT">4 in 1 Travel Dispenser, Lotion Shampoo Gel Travel Dispenser Bottle Sets Shower Bottles Refillable Travel Bottles...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.59</span><span class="ori_price">$15.99</span>
+        <div class="tooltip_common tooltip_green"><span> + 10% off Coupon</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span> + 10% off Coupon</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">40CHIVENIDO</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $15.99</strong> with promo code: <strong class="m_codes">40CHIVENIDO</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 18, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LDmoOT">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="45" data-price="15.94">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/308pVN9"><img src="https://m.media-amazon.com/images/I/61z88lnRftL._SR400,400_.jpg" alt="CNFIO Womens Long Sleeve Sweater Cardigan..." /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/308pVN9">CNFIO Womens Long Sleeve Sweater Cardigan Open Front Loose Chunky Outwear with Pockets</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.94</span><span class="ori_price">$28.99</span></address>
+      <textarea readonly="readonly" class="code_area">45VFYV96</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $28.99</strong> with promo code: <strong class="m_codes">45VFYV96</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 18, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/308pVN9">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="35" data-price="11.04">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2O7YJHT"><img src="https://m.media-amazon.com/images/I/91HkDoVkIXL._SR400,400_.jpg" alt="Universal Power Adapter" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2O7YJHT">Universal Power Adapter, Woigi Travel Power Converter with 4 USB Ports Power Plug Adapter for EU, UK, US, USA, AU, Europe...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.04</span><span class="ori_price">$16.99</span></address>
+      <textarea readonly="readonly" class="code_area">35WKA7VR</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>35% off at $16.99</strong> with promo code: <strong class="m_codes">35WKA7VR</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 30, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2O7YJHT">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="35" data-price="49.72">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/307XRKK"><img src="https://images-na.ssl-images-amazon.com/images/I/71HL2PlsZ4L._SX679_.jpg" alt="Travel Coffee Maker" /></a>
   </div>
