--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -160,9 +160,9 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/307VXJU">Lekesky Laptop Backpack Student Bookbag Backpack for Women Men, Simple Laptop Backpack,Fits up to 15.6 Inch Laptop Notebook,...</a></p>
     <div class="code_high">
-      <address><span class="dis_price">$13.48</span><span class="ori_price">$$26</span></address>
+      <address><span class="dis_price">$13.48</span><span class="ori_price">$26.97</span></address>
       <textarea readonly="readonly" class="code_area">50WN5RMW</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>50% off at $$26</strong> with promo code: <strong class="m_codes">50WN5RMW</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 19, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <p class="mobile_code"><span>Take <strong>50% off at $26.97</strong> with promo code: <strong class="m_codes">50WN5RMW</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 19, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/307VXJU">Use Code at Amazon</a></div>
