--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -99,12 +99,12 @@
   <div class="deal_btn"><a target="_blank" href="https://amzn.to/32V23ui">Shop Now at Amazon</a></div>
 </div>
 
-<div class="card dealofday clearfix" data-score="Percentage" data-price="discounted_price">
+<div class="card dealofday clearfix" data-score="55" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/32QCQ40"><img src="https://images-na.ssl-images-amazon.com/images/I/71YginumwKL._SX425_.jpg" alt="Amazon Deal Of The Day" /></a>
   </div>
   <div class="inner inner_top">
-    <span class="regular"><em>Percentage% OFF</em> + free shipping</span>
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/32QCQ40"><span>Amazon Deal Of The Day:</span><br /> Save up to 55% off Brickyard Building Blocks and More</a></p>
     <div class="code_high">
